--- a/opera.html
+++ b/opera.html
@@ -14,33 +14,33 @@
     <h5>Scene.—Palace Yard, Westminster.  Westminster Hall, L.  Clock
         tower up, R.C. Private Willis discovered on sentry, R. Moonlight.</h5>
 
-    <pre>                          (Enter Fairy Queen.)
+    <pre>                          <p>(Enter Fairy Queen.)</p>
 
-        QUEEN.  Oh, shame—shame upon you!  Is this your fidelity to
+        <h4>QUEEN.</h4>  <p>Oh, shame—shame upon you!  Is this your fidelity to
    the laws you are bound to obey?  Know ye not that it is death to
-   marry a mortal?
-        LEILA.  Yes, but it's not death to wish to marry a mortal!
-        FLETA.  If it were, you'd have to execute us all!
-        QUEEN.  Oh, this is weakness!  Subdue it!
-        CELIA.  We know it's weakness, but the weakness is so strong!
-        LEILA.  We are not all as tough as you are!
-        QUEEN.  Tough!  Do you suppose that I am insensible to the
-   effect of manly beauty?  Look at that man!  (Referring to Sentry.)
-   A perfect picture!  (To Sentry.)  Who are you, sir?
-        WILLIS (coming to "attention").  Private Willis, B Company,
-   1st Grenadier Guards.
-        QUEEN.  You're a very fine fellow, sir.
-        WILLIS.  I am generally admired.
-        QUEEN.  I can quite understand it.  (To Fairies.)  Now here is
+   marry a mortal?</p>
+        <h4>LEILA.</h4>  <p>Yes, but it's not death to wish to marry a mortal!</p>
+        <h4>FLETA.</h4>  <p>If it were, you'd have to execute us all!</p>
+        <h4>QUEEN.</h4>  <p>Oh, this is weakness!  Subdue it!</p>
+        <h4>CELIA.</h4>  <p>We know it's weakness, but the weakness is so strong!</p>
+        <h4>LEILA.</h4>  <p>We are not all as tough as you are!</p>
+        <h4>QUEEN.</h4>  <p>Tough!  Do you suppose that I am insensible to the
+   effect of manly beauty?  Look at that man!  <p>(Referring to Sentry.)</p>
+   A perfect picture!  <p>(To Sentry.)</p>  Who are you, sir?
+        <h4>WILLIS <p>(coming to "attention").</p></h4>  <p>Private Willis, B Company,
+   1st Grenadier Guards.</p>
+        <h4>QUEEN.</h4>  <p>You're a very fine fellow, sir.</p>
+        <h4>WILLIS.</h4>  <p>I am generally admired.</p>
+        <h4>QUEEN.</h4>  <p>I can quite understand it.  <p>(To Fairies.)</p>  Now here is
    a man whose physical attributes are simply godlike.  That man has
    a most extraordinary effect upon me.  If I yielded to a natural
    impulse, I should fall down and worship that man.  But I mortify
    this inclination; I wrestle with it, and it lies beneath my feet!
-   That is how I treat my regard for that man!
+   That is how I treat my regard for that man!</p>
  
                           SONG—FAIRY QUEEN.
- 
-                       Oh, foolish fay,
+                       <p> 
+                         Oh, foolish fay,
                             Think you, because
                        His brave array
                             My bosom thaws,
@@ -78,8 +78,8 @@
                                       With cold cascade
                                  Quench my great love, I wonder!
  
-   CHORUS.             Oh, Captain Shaw! etc.
+   CHORUS.             Oh, Captain Shaw! etc.</p>
  
-                (Exeunt Fairies and Fairy Queen, sorrowfully.)</pre>
+               <p>(Exeunt Fairies and Fairy Queen, sorrowfully.)</p></pre>
 </body>
 </html>
