added styles to html

--- a/opera.html
+++ b/opera.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
+    <link rel="stylesheet" href="gs.css">
 </head>
 <body>
     <h1>Neerazsai Productions LTD</h1>
@@ -14,24 +15,24 @@
     <h5>Scene.—Palace Yard, Westminster.  Westminster Hall, L.  Clock
         tower up, R.C. Private Willis discovered on sentry, R. Moonlight.</h5>
 
-    <pre>                          <p>(Enter Fairy Queen.)</p>
+    <pre>                          <p class="direction">(Enter Fairy Queen.)</p>
 
-        <h4>QUEEN.</h4>  <p>Oh, shame—shame upon you!  Is this your fidelity to
+        <h4 class="queen">QUEEN.</h4>  <p class="speech">Oh, shame—shame upon you!  Is this your fidelity to
    the laws you are bound to obey?  Know ye not that it is death to
    marry a mortal?</p>
-        <h4>LEILA.</h4>  <p>Yes, but it's not death to wish to marry a mortal!</p>
-        <h4>FLETA.</h4>  <p>If it were, you'd have to execute us all!</p>
-        <h4>QUEEN.</h4>  <p>Oh, this is weakness!  Subdue it!</p>
-        <h4>CELIA.</h4>  <p>We know it's weakness, but the weakness is so strong!</p>
-        <h4>LEILA.</h4>  <p>We are not all as tough as you are!</p>
-        <h4>QUEEN.</h4>  <p>Tough!  Do you suppose that I am insensible to the
-   effect of manly beauty?  Look at that man!  <p>(Referring to Sentry.)</p>
-   A perfect picture!  <p>(To Sentry.)</p>  Who are you, sir?
-        <h4>WILLIS <p>(coming to "attention").</p></h4>  <p>Private Willis, B Company,
+        <h4 class="leila">LEILA.</h4>  <p class="speech">Yes, but it's not death to wish to marry a mortal!</p>
+        <h4 class="fleta">FLETA.</h4>  <p class="speech">If it were, you'd have to execute us all!</p>
+        <h4 class="queen">QUEEN.</h4>  <p class="speech">Oh, this is weakness!  Subdue it!</p>
+        <h4 class="celia">CELIA.</h4>  <p class="speech">We know it's weakness, but the weakness is so strong!</p>
+        <h4 class="leila">LEILA.</h4>  <p class="speech">We are not all as tough as you are!</p>
+        <h4 class="queen">QUEEN.</h4>  <p class="speech">Tough!  Do you suppose that I am insensible to the
+   effect of manly beauty?  Look at that man!  <p class="direction">(Referring to Sentry.)</p>
+   A perfect picture!  <p class="direction">(To Sentry.)</p>  Who are you, sir?
+        <h4 class="willis">WILLIS</h4> <p class="direction">(coming to "attention").</p>  <p class="speech">Private Willis, B Company,
    1st Grenadier Guards.</p>
-        <h4>QUEEN.</h4>  <p>You're a very fine fellow, sir.</p>
-        <h4>WILLIS.</h4>  <p>I am generally admired.</p>
-        <h4>QUEEN.</h4>  <p>I can quite understand it.  <p>(To Fairies.)</p>  Now here is
+        <h4 class="queen">QUEEN.</h4>  <p class="speech">You're a very fine fellow, sir.</p>
+        <h4 class="willis">WILLIS.</h4>  <p class="speech">I am generally admired.</p>
+        <h4 class="queen">QUEEN.</h4>  <p class="speech">I can quite understand it.  <p class="direction">(To Fairies.)</p>  Now here is
    a man whose physical attributes are simply godlike.  That man has
    a most extraordinary effect upon me.  If I yielded to a natural
    impulse, I should fall down and worship that man.  But I mortify
@@ -39,7 +40,7 @@
    That is how I treat my regard for that man!</p>
  
                           SONG—FAIRY QUEEN.
-                       <p> 
+                       <p class="song"> 
                          Oh, foolish fay,
                             Think you, because
                        His brave array
@@ -52,7 +53,7 @@
                             To fall in love,
                        Resemble I
                             The amorous dove?
-   (Aside.)            Oh, amorous dove!
+   <p class="direction">(Aside.)</p>            Oh, amorous dove!
                             Type of Ovidius Naso!
                                  This heart of mine
                                  Is soft as thine,
@@ -72,7 +73,7 @@
                             On which to draw—
                        In that we gain
                             A Captain Shaw!
-   (Aside.)                 Oh, Captain Shaw!
+   <p class="direction">(Aside.)</p>                 Oh, Captain Shaw!
                                  Type of true love kept under!
                                       Could thy Brigade
                                       With cold cascade
@@ -80,6 +81,6 @@
  
    CHORUS.             Oh, Captain Shaw! etc.</p>
  
-               <p>(Exeunt Fairies and Fairy Queen, sorrowfully.)</p></pre>
+               <p class="direction">(Exeunt Fairies and Fairy Queen, sorrowfully.)</p></pre>
 </body>
 </html>
