--- a/opera.html
+++ b/opera.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
-    <link rel="stylesheet" href="gs.css">
+     <meta charset="UTF-8">
+     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <title>Home Page</title>
+     <link rel="stylesheet" href="gs.css">
 </head>
+
 <body>
-    <h1>Neerazsai Productions LTD</h1>
+     <h1>Neerazsai Productions LTD</h1>
 
-    <h3>Iolanthe</h3>
+     <h3>Iolanthe</h3>
 
-    <h5>Scene.—Palace Yard, Westminster.  Westminster Hall, L.  Clock
-        tower up, R.C. Private Willis discovered on sentry, R. Moonlight.</h5>
+     <h5>Scene.—Palace Yard, Westminster. Westminster Hall, L. Clock
+          tower up, R.C. Private Willis discovered on sentry, R. Moonlight.</h5>
 
-    <pre>                          <p class="direction">(Enter Fairy Queen.)</p>
+     <pre>                          <p class="direction">(Enter Fairy Queen.)</p>
 
         <h4 class="queen">QUEEN.</h4>  <p class="speech">Oh, shame—shame upon you!  Is this your fidelity to
    the laws you are bound to obey?  Know ye not that it is death to
@@ -82,5 +84,43 @@
    CHORUS.             Oh, Captain Shaw! etc.</p>
  
                <p class="direction">(Exeunt Fairies and Fairy Queen, sorrowfully.)</p></pre>
+
+     <table>
+          <thead>
+               <tr>
+                    <th>Character</th>
+                    <th>Singer</th>
+                    <th>Offer</th>
+               </tr>
+          </thead>
+          <tbody>
+               <tr>
+                    <td>Queen</td>
+                    <td>Chitra</td>
+                    <td>10 Million Dollars</td>
+               </tr>
+               <tr>
+                    <td>Leila</td>
+                    <td>Geetha Madhuri</td>
+                    <td>5 Million Dollars</td>
+               </tr>
+               <tr>
+                    <td>Fleta</td>
+                    <td>Parnika Manya</td>
+                    <td>5 Million Dollars</td>
+               </tr>
+               <tr>
+                    <td>Celia</td>
+                    <td>Ramya Behra</td>
+                    <td>5 Million Dollars</td>
+               </tr>
+               <tr>
+                    <td>Willis</td>
+                    <td>Hema chandra</td>
+                    <td>5 Million Dollars</td>
+               </tr>
+          </tbody>
+     </table>
 </body>
+
 </html>
