--- a/opera.html
+++ b/opera.html
@@ -121,6 +121,8 @@
                </tr>
           </tbody>
      </table>
+
+     click <a href="opera2.html">here</a> to continue the play
 </body>
 
 </html>
