--- a/opera.html
+++ b/opera.html
@@ -122,7 +122,7 @@
           </tbody>
      </table>
 
-     click <a href="opera2.html">here</a> to continue the play
+     <label>Click <a href="opera2.html">here</a> to continue the play</label>
 </body>
 
 </html>
