added icons and navbar

--- a/opera.html
+++ b/opera.html
@@ -7,34 +7,38 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Home Page</title>
      <link rel="stylesheet" href="gs.css">
+     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
+     <link rel="icon" type="image/png" sizes="32x32" href="/images/icons/queen-32.png">
 </head>
 
 <body>
-     <h1>Neerazsai Productions LTD</h1>
+     <h1><i class="material-symbols-outlined" style="font-size: 40px;">person</i>Neerazsai Productions LTD</h1>
 
      <h3>Iolanthe</h3>
+
+     <img src="images/cover.jpg" alt="Cover Page" width="200px" height="200px">
 
      <h5>Scene.—Palace Yard, Westminster. Westminster Hall, L. Clock
           tower up, R.C. Private Willis discovered on sentry, R. Moonlight.</h5>
 
-     <pre>                          <p class="direction">(Enter Fairy Queen.)</p>
+     <pre>                          <p class="direction"><i class="material-symbols-outlined" style="font-size: 20px;">arrow_circle_right</i>  (Enter Fairy Queen.)</p>
 
-        <h4 class="queen">QUEEN.</h4>  <p class="speech">Oh, shame—shame upon you!  Is this your fidelity to
+        <h4 class="queen"><i class="material-symbols-outlined" style="font-size: 20px;">star</i>  QUEEN.</h4>  <p class="speech">Oh, shame—shame upon you!  Is this your fidelity to
    the laws you are bound to obey?  Know ye not that it is death to
    marry a mortal?</p>
-        <h4 class="leila">LEILA.</h4>  <p class="speech">Yes, but it's not death to wish to marry a mortal!</p>
-        <h4 class="fleta">FLETA.</h4>  <p class="speech">If it were, you'd have to execute us all!</p>
-        <h4 class="queen">QUEEN.</h4>  <p class="speech">Oh, this is weakness!  Subdue it!</p>
-        <h4 class="celia">CELIA.</h4>  <p class="speech">We know it's weakness, but the weakness is so strong!</p>
-        <h4 class="leila">LEILA.</h4>  <p class="speech">We are not all as tough as you are!</p>
-        <h4 class="queen">QUEEN.</h4>  <p class="speech">Tough!  Do you suppose that I am insensible to the
-   effect of manly beauty?  Look at that man!  <p class="direction">(Referring to Sentry.)</p>
-   A perfect picture!  <p class="direction">(To Sentry.)</p>  Who are you, sir?
-        <h4 class="willis">WILLIS</h4> <p class="direction">(coming to "attention").</p>  <p class="speech">Private Willis, B Company,
+        <h4 class="leila"><i class="material-symbols-outlined" style="font-size: 20px;">star</i>  LEILA.</h4>  <p class="speech">Yes, but it's not death to wish to marry a mortal!</p>
+        <h4 class="fleta"><i class="material-symbols-outlined" style="font-size: 20px;">star</i>  FLETA.</h4>  <p class="speech">If it were, you'd have to execute us all!</p>
+        <h4 class="queen"><i class="material-symbols-outlined" style="font-size: 20px;">star</i>  QUEEN.</h4>  <p class="speech">Oh, this is weakness!  Subdue it!</p>
+        <h4 class="celia"><i class="material-symbols-outlined" style="font-size: 20px;">star</i>  CELIA.</h4>  <p class="speech">We know it's weakness, but the weakness is so strong!</p>
+        <h4 class="leila"><i class="material-symbols-outlined" style="font-size: 20px;">star</i>  LEILA.</h4>  <p class="speech">We are not all as tough as you are!</p>
+        <h4 class="queen"><i class="material-symbols-outlined" style="font-size: 20px;">star</i>  QUEEN.</h4>  <p class="speech">Tough!  Do you suppose that I am insensible to the
+   effect of manly beauty?  Look at that man!  <p class="direction"><i class="material-symbols-outlined" style="font-size: 20px;">arrow_circle_right</i>  (Referring to Sentry.)</p>
+   A perfect picture!  <p class="direction"><i class="material-symbols-outlined" style="font-size: 20px;">arrow_circle_right</i>  (To Sentry.)</p>  Who are you, sir?
+        <h4 class="willis"><i class="material-symbols-outlined" style="font-size: 20px;">star</i>  WILLIS</h4> <p class="direction"><i class="material-symbols-outlined" style="font-size: 20px;">arrow_circle_right</i>  (coming to "attention").</p>  <p class="speech">Private Willis, B Company,
    1st Grenadier Guards.</p>
-        <h4 class="queen">QUEEN.</h4>  <p class="speech">You're a very fine fellow, sir.</p>
-        <h4 class="willis">WILLIS.</h4>  <p class="speech">I am generally admired.</p>
-        <h4 class="queen">QUEEN.</h4>  <p class="speech">I can quite understand it.  <p class="direction">(To Fairies.)</p>  Now here is
+        <h4 class="queen"><i class="material-symbols-outlined" style="font-size: 20px;">star</i>  QUEEN.</h4>  <p class="speech">You're a very fine fellow, sir.</p>
+        <h4 class="willis"><i class="material-symbols-outlined" style="font-size: 20px;">star</i>  WILLIS.</h4>  <p class="speech">I am generally admired.</p>
+        <h4 class="queen"><i class="material-symbols-outlined" style="font-size: 20px;">star</i>  QUEEN.</h4>  <p class="speech">I can quite understand it.  <p class="direction"><i class="material-symbols-outlined" style="font-size: 20px;">arrow_circle_right</i>  (To Fairies.)</p>  Now here is
    a man whose physical attributes are simply godlike.  That man has
    a most extraordinary effect upon me.  If I yielded to a natural
    impulse, I should fall down and worship that man.  But I mortify
@@ -55,7 +59,7 @@
                             To fall in love,
                        Resemble I
                             The amorous dove?
-   <p class="direction">(Aside.)</p>            Oh, amorous dove!
+   <p class="direction"><i class="material-symbols-outlined" style="font-size: 20px;">arrow_circle_right</i>  (Aside.)</p>            Oh, amorous dove!
                             Type of Ovidius Naso!
                                  This heart of mine
                                  Is soft as thine,
@@ -75,7 +79,7 @@
                             On which to draw—
                        In that we gain
                             A Captain Shaw!
-   <p class="direction">(Aside.)</p>                 Oh, Captain Shaw!
+   <p class="direction"><i class="material-symbols-outlined" style="font-size: 20px;">arrow_circle_right</i>  (Aside.)</p>                 Oh, Captain Shaw!
                                  Type of true love kept under!
                                       Could thy Brigade
                                       With cold cascade
@@ -83,7 +87,7 @@
  
    CHORUS.             Oh, Captain Shaw! etc.</p>
  
-               <p class="direction">(Exeunt Fairies and Fairy Queen, sorrowfully.)</p></pre>
+               <p class="direction"><i class="material-symbols-outlined" style="font-size: 20px;">arrow_circle_right</i>  (Exeunt Fairies and Fairy Queen, sorrowfully.)</p></pre>
 
      <table>
           <thead>
@@ -122,7 +126,13 @@
           </tbody>
      </table>
 
-     <label>Click <a href="opera2.html">here</a> to continue the play</label>
+     <!-- <label>Click <a href="opera2.html">here</a> to continue the play</label> -->
+
+     <ul>
+          <li class="nav-item-prev"><a href="opera.html">previous page</a></li>
+          <li class="nav-item-next"><a href="opera2.html">next page</a></li>
+     </ul>
+        
 </body>
 
 </html>
