--- a/opera2.html
+++ b/opera2.html
@@ -7,10 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>And the show goes on...</title>
     <link rel="stylesheet" href="gs.css">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
+    <link rel="icon" type="image/png" sizes="32x32" href="/images/icons/queen-32.png">
 </head>
 
 <body>
-    <h1>Neerazsai Productions LTD</h1>
+    <h1><i class="material-symbols-outlined" style="font-size: 40px;">person</i>Neerazsai Productions LTD</h1>
 
     <h3>Iolanthe</h3>
 
@@ -18,19 +20,19 @@
         tower up, R.C. Private Willis discovered on sentry, R. Moonlight.</h5>
 
     <pre>
-        <p class="direction">(Enter Phyllis.)</p>
+        <p class="direction"><i class="material-symbols-outlined" style="font-size: 20px;">arrow_circle_right</i>  (Enter Phyllis.)</p>
 
-        <h4 class="phyl">PHYL.</h4>  <p class="direction">(half crying).</p>  <p class="speech">I can't think why I'm not in better
+        <h4 class="phyl"><i class="material-symbols-outlined" style="font-size: 20px;">star</i>  PHYL.</h4>  <p class="direction"><i class="material-symbols-outlined" style="font-size: 20px;">arrow_circle_right</i>  (half crying).</p>  <p class="speech">I can't think why I'm not in better
    spirits.  I'm engaged to two noblemen at once.  That ought to be
    enough to make any girl happy.  But I'm miserable!  Don't suppose
    it's because I care for Strephon, for I hate him!  No girl could
    care for a man who goes about with a mother considerably younger
    than himself!</p>
  
-<p class="direction">(Enter Lord Mountararat and Lord Tolloller.)</p>
+<p class="direction"><i class="material-symbols-outlined" style="font-size: 20px;">arrow_circle_right</i>  (Enter Lord Mountararat and Lord Tolloller.)</p>
  
-    <h4 class="lord-mount">LORD MOUNT.</h4>  <p class="speech">Phyllis!  My darling!</p>
-    <h4 class="lord-toll">LORD TOLL.</h4>  <p class="speech">Phyllis!  My own!</p>
+    <h4 class="lord-mount"><i class="material-symbols-outlined" style="font-size: 20px;">star</i>  LORD MOUNT.</h4>  <p class="speech">Phyllis!  My darling!</p>
+    <h4 class="lord-toll"><i class="material-symbols-outlined" style="font-size: 20px;">star</i>  LORD TOLL.</h4>  <p class="speech">Phyllis!  My own!</p>
  
     </pre>
 
@@ -71,7 +73,12 @@
         </tbody>
     </table>
 
-    <label>Click <a href="opera.html">here</a> to navigate back to the starting of the Act.</label>
+    <!-- <label>Click <a href="opera.html">here</a> to navigate back to the starting of the Act.</label> -->
+
+    <ul>
+        <li class="nav-item-prev"><a href="opera.html">previous page</a></li>
+        <li class="nav-item-next"><a href="opera2.html">next page</a></li>
+   </ul>
 
 </body>
 
