--- a/opera.html
+++ b/opera.html
@@ -8,7 +8,7 @@
      <title>Home Page</title>
      <link rel="stylesheet" href="gs.css">
      <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
-     <link rel="icon" type="image/png" sizes="32x32" href="/images/icons/queen-32.png">
+     <link rel="icon" type="image/x-icon" href="/images/icons/favicon.ico">
 </head>
 
 <body>
